--- a/GGJ_Featherbrick/Assembly-CSharp.csproj
+++ b/GGJ_Featherbrick/Assembly-CSharp.csproj
@@ -65,35 +65,37 @@
     <Compile Include="Assets\Scripts\CharacterController.cs" />
     <Compile Include="Assets\Scripts\ControllerManager.cs" />
     <Compile Include="Assets\Scripts\DynamicCamera.cs" />
+    <Compile Include="Assets\Scripts\GLOBAL_.cs" />
     <Compile Include="Assets\Scripts\Jump.cs" />
     <Compile Include="Assets\Scripts\Pickup_Throw.cs" />
+    <Compile Include="Assets\Scripts\PlayerSelect.cs" />
     <Compile Include="Assets\TrashSpawner.cs" />
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>E:/GGJ/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>M:/YEAR 3/Game Jam/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-      <HintPath>E:/GGJ/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+      <HintPath>M:/YEAR 3/Game Jam/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>E:/GGJ/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>M:/YEAR 3/Game Jam/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>E:/GGJ/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+      <HintPath>M:/YEAR 3/Game Jam/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>E:/GGJ/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>M:/YEAR 3/Game Jam/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>E:/GGJ/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>M:/YEAR 3/Game Jam/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>E:/GGJ/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+      <HintPath>M:/YEAR 3/Game Jam/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>E:/GGJ/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>M:/YEAR 3/Game Jam/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>E:/GGJ/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+      <HintPath>M:/YEAR 3/Game Jam/ggj_featherbrick/GGJ_Featherbrick/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity2019.2/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
